修改后端结构，增加测试用例
